tests/paczka1/fuzzy1/95769081.err
Error in line 8: KAquMzn A124 79,9
Error in line 11: KAquMzn S552 55,2
Error in line 10: S441 S638 45,2
Error in line 9: 2QIIUBPU A124 96,5
Error in line 15: lYIRlLx A124 95,9
Error in line 25: KAquMzn S441 4,8
Error in line 23: lYIRlLx S552 94,8
Error in line 31: lYIRlLx A124 65,9
